tests/purs/failing/RowDiffs.purs
-- @shouldFailWith TypesDoNotUnify
-- @shouldFailWith TypesDoNotUnify
-- @shouldFailWith TypesDoNotUnify
-- @shouldFailWith TypesDoNotUnify
module Main where

import Effect.Console (log)

import RowDiffs.A
import RowDiffs.B
import RowDiffs.C
import RowDiffs.D

main = log "done"
